--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="#projects">Projets</a>
       <a href="#contact">Contact</a>
     </nav>
+    <button id="theme-toggle" aria-label="Changer le thème">🌓</button>
   </header>
 
   <section id="about">
