rajout d'une flèche pour défiler la page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <button id="theme-toggle" aria-label="Changer le thème">🌓</button>
   </header>
 
+  <div class="scroll-down">
+    <img src="img/fleche_vers_le_bas.svg" alt="Faire défiler vers le bas" id="scroll-arrow">
+  </div>
+
   <section id="about">
     <h2>À propos</h2>
     <p>
