--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <div class="scroll-down">
-    <img src="img/fleche_vers_le_bas.svg" alt="Faire défiler vers le bas" id="scroll-arrow">
+    <img src="fleche_vers_le_bas.svg" alt="Faire défiler vers le bas" id="scroll-arrow">
   </div>
 
   <section id="about">
