création de la page unreal engine

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Les projets -->
     <div class="projects-grid">
       <div class="canvas-wrapper">
-        <a href="#" class="canvas">
+        <a href="unreal_engine.html" class="canvas">
           <div class="canvas_border">
             <svg viewBox="0 0 400 400" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
               <defs>
@@ -59,9 +59,8 @@
 
           <div class="canvas_copy canvas_copy--left">
             <span class="canvas_copy_subtitle">Prototype</span>
-            <strong class="canvas_copy_title">Nom du projet 1</strong>
-            <strong class="canvas_copy_title">Gameplay</strong>
-            <span class="canvas_copy_details">Unity • C#</span>
+            <strong class="canvas_copy_title">Apprentissage</strong>
+            <span class="canvas_copy_details">Unreal Engine • Blueprint</span>
           </div>
         </a>
 
