changement boutons contact

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
     <h2>Contact</h2>
     <p>Tu veux échanger ? Contacte-moi :</p>
     <ul class="contact-list">
-      <li><button class="contact-btn" onclick="location.href='mailto:marvyn.30042006@gmail.com'">Mon email</button></li>
-      <li><button class="contact-btn" onclick="window.open('https://github.com/Mar20b', '_blank')">Mon Github</button></li>
-      <li><button class="contact-btn" onclick="window.open('https://linkedin.com/in/marvyn-brouard-039897347', '_blank')">Mon Linkedin</button></li>
-      <li><button class="contact-btn" onclick="window.open('https://discord.com/users/628260855271784489', '_blank')">Mon Discord</button></li>
+      <li><button class="contact-btn" onclick="location.href='mailto:marvyn.30042006@gmail.com'">Email</button></li>
+      <li><button class="contact-btn" onclick="window.open('https://github.com/Mar20b', '_blank')">Github</button></li>
+      <li><button class="contact-btn" onclick="window.open('https://linkedin.com/in/marvyn-brouard-039897347', '_blank')">Linkedin</button></li>
+      <li><button class="contact-btn" onclick="window.open('https://discord.com/users/628260855271784489', '_blank')">Discord</button></li>
     </ul>
   </section>
 
   <footer>
-    <p>© 2025 Brouard Marvyn — Portfolio créé avec amour</p>
+    <p>© 2025 Brouard Marvyn</p>
   </footer>
 
   <script src="script.js"></script>
