création de la frise

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Brouard Marvyn</h1>
       <h1 class="mask">Brouard Marvyn</h1>
     </div>
-    <p>Étudiant en informatique & futur développeur de jeux vidéo</p>
+    <h4>Étudiant en informatique & futur développeur de jeux vidéo</h4>
     <div class="scroll-down">
       <img src="fleche_vers_le_bas.svg" alt="Faire défiler vers le bas" id="scroll-arrow">
     </div>
@@ -34,9 +34,28 @@
   </header>
 
   <section id="about">
-    <h2>À propos</h2>
+    <h2>À propos de moi</h2>
     <div class="card">
-      3D Card
+      <div class= "lycee">
+        <h3>Lycée</h3>
+        <p>Bac Général</p>
+        <p>Spécialité :</p>
+        <p>・Mathématiques</p>
+        <p>・Physique-Chimie</p>
+        <p style="font-size: 0.9rem;">+ Option Maths Expertes</p>
+      </div>
+      <div class= "icssa">
+        <h3>ICSSA</h3>
+        <p>lorem ipsum</p>
+      </div>
+      <div class= "apres">
+        <h3>Après</h3>
+        <p>lorem ipsum</p>
+      </div>
+      <img src="img/frise_b.png"
+           alt="Frise"
+           data-src-light="img/frise_n.png"
+           data-src-dark="img/frise_b.png">
     </div>
   </section>
 
@@ -105,7 +124,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Tu veux échanger ? Contacte-moi :</p>
+    <h3>Tu veux échanger ? Contacte-moi :</h3>
     <ul class="contact-list">
       <li><button class="contact-btn" onclick="location.href='mailto:marvyn.30042006@gmail.com'">Email</button></li>
       <li><button class="contact-btn" onclick="window.open('https://github.com/Mar20b', '_blank')">Github</button></li>
