rajout flèche chrono

--- a/index.html
+++ b/index.html
@@ -35,27 +35,96 @@
 
   <section id="about">
     <h2>À propos de moi</h2>
-    <div class="card">
-      <div class= "lycee">
-        <h3>Lycée</h3>
-        <p>Bac Général</p>
-        <p>Spécialité :</p>
-        <p>・Mathématiques</p>
-        <p>・Physique-Chimie</p>
-        <p style="font-size: 0.9rem;">+ Option Maths Expertes</p>
-      </div>
-      <div class= "icssa">
-        <h3>ICSSA</h3>
-        <p>lorem ipsum</p>
-      </div>
-      <div class= "apres">
-        <h3>Après</h3>
-        <p>lorem ipsum</p>
-      </div>
-      <img src="img/frise_b.png"
-           alt="Frise"
-           data-src-light="img/frise_n.png"
-           data-src-dark="img/frise_b.png">
+    <img id="fleche_1"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_1.svg"
+    data-src-dark="img/fleche_b/fleche_1.svg"/>
+    <img id="fleche_2"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_2.svg"
+    data-src-dark="img/fleche_b/fleche_2.svg"/>
+    <img id="fleche_3"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_3.svg"
+    data-src-dark="img/fleche_b/fleche_3.svg"/>
+    <img id="fleche_4"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_4.svg"
+    data-src-dark="img/fleche_b/fleche_4.svg"/>
+    <img id="fleche_5"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_5.svg"
+    data-src-dark="img/fleche_b/fleche_5.svg"/>
+    <img id="fleche_6"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_6.svg"
+    data-src-dark="img/fleche_b/fleche_6.svg"/>
+    <img id="fleche_7"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_7.svg"
+    data-src-dark="img/fleche_b/fleche_7.svg"/>
+    <img id="fleche_8"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_8.svg"
+    data-src-dark="img/fleche_b/fleche_8.svg"/>
+    <img id="fleche_9"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_9.svg"
+    data-src-dark="img/fleche_b/fleche_9.svg"/>
+    <img id="fleche_10"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_10.svg"
+    data-src-dark="img/fleche_b/fleche_10.svg"/>
+    <img id="fleche_11"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_11.svg"
+    data-src-dark="img/fleche_b/fleche_11.svg"/>
+    <img id="fleche_12"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_12.svg"
+    data-src-dark="img/fleche_b/fleche_12.svg"/>
+    <img id="fleche_13"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_13.svg"
+    data-src-dark="img/fleche_b/fleche_13.svg"/>
+    <img id="fleche_14"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_14.svg"
+    data-src-dark="img/fleche_b/fleche_14.svg"/>
+    <img id="fleche_15"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_15.svg"
+    data-src-dark="img/fleche_b/fleche_15.svg"/>
+    <img id="fleche_16"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_16.svg"
+    data-src-dark="img/fleche_b/fleche_16.svg"/>
+    <img id="fleche_17"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_17.svg"
+    data-src-dark="img/fleche_b/fleche_17.svg"/>
+    <img id="fleche_18"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_18.svg"
+    data-src-dark="img/fleche_b/fleche_18.svg"/>
+    <img id="fleche_19"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_19.svg"
+    data-src-dark="img/fleche_b/fleche_19.svg"/>
+    <img id="fleche_20"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_20.svg"
+    data-src-dark="img/fleche_b/fleche_20.svg"/>
+    <img id="fleche_21"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_21.svg"
+    data-src-dark="img/fleche_b/fleche_21.svg"/>
+    <img id="fleche_22"
+    class="fleche"
+    data-src-light="img/fleche_n/fleche_22.svg"
+    data-src-dark="img/fleche_b/fleche_22.svg"/>
+    <div class="text-about">
+      <p>Bonjour !</p>
     </div>
   </section>
 
